--- a/src/style.scss
+++ b/src/style.scss
@@ -64,3 +64,22 @@ html {
     border-radius: 5px;
     border: 0px
 }
+
+.tab {
+    display: flex;
+    .tab-item {
+        flex: 0 0 0px;
+        font-family: nunito;
+        color: var(--text-dark);
+        margin: 40px;
+        margin-left: 0px;
+        margin-top: 0px;
+        text-align: center;
+        min-width: 200px;
+        font-weight: bold;
+        cursor: pointer;
+    }
+    .active {
+        border-bottom: 2px solid var(--main);
+    }
+}
