--- a/src/style.scss
+++ b/src/style.scss
@@ -9,7 +9,8 @@ html[data-theme='light'] {
     --search-border: rgb(233, 236, 243);
     --name-title: #292828;
     --shine: linear-gradient(to right, #f6f7f8 0%, #edeef1 20%, #f6f7f8 40%, #edf0f3 100%, #f6f7f8 100%);
-    --table-border: rgb(229, 228, 233)
+    --table-border: rgb(229, 228, 233);
+    --table-hover: rgb(243, 243, 243);
 }
 
 html {
@@ -23,7 +24,8 @@ html {
     --search-border: rgb(19, 19, 20);
     --name-title: #D2D2D2;
     --shine: linear-gradient(to right, #1E2029 0%, rgb(26, 28, 34) 20%, rgb(19, 20, 29) 40%, rgb(13, 20, 27) 100%);
-    --table-border: rgb(78, 77, 97)
+    --table-border: rgb(78, 77, 97);
+    --table-hover: rgb(26, 27, 34);
 }
 
 .image-round {
@@ -53,6 +55,10 @@ html {
     &::placeholder {
         color: var(--text-light)
     }
+}
+
+table {
+    border-collapse: collapse;
 }
 
 .btn-norm {
@@ -122,5 +128,21 @@ html {
     }
     .prev {
         border-radius: 5px 0 0 5px;
+    }
+}
+
+tr {
+    text-align: left;
+    padding: 20px;
+    color: var(--text-dark);
+    &:hover {
+        background-color: var(--table-hover);
+        .play {
+            display: block;
+        }
+    }
+    .play {
+        display: none;
+        margin-top: -5px;
     }
 }
